Update config for XGboost/Spark extension.

--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -9,7 +9,5 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.feature.StringMapOp"
 ]
 
-ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.extension.ops"
-ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.extension.ops"
-ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.extension.ops"
-ml.combust.mleap.spark.registry.v23.ops += "ml.combust.mleap.spark.extension.ops"
+ml.combust.mleap.spark.registry.default.ops += "ml.combust.mleap.spark.extension.ops"
+
