Get rid of XGBoost integration for Spark 2.4 for now.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -1,5 +1,11 @@
 ml.combust.mleap.registry.default.ops += "ml.combust.mleap.registry.builtin-ops"
 
+ml.combust.mleap.registry.default.ops = [
+  "ml.combust.mleap.registry.builtin-ops", // builtin mleap ops, includes standard Spark + extended and Scikit ops
+  "ml.combust.mleap.tensorflow.ops", // tensorflow transformer op
+  "ml.combust.mleap.xgboost.ops", // XGBoost runtime op
+]
+
 ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.classification.DecisionTreeClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.GBTClassifierOp",
