--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -4,5 +4,5 @@ scipy>=0.13.0b1
 pandas>=0.18.1
 scikit-learn>0.18.dev0,<0.20.0
 nose-exclude>=0.5.0
-gensim==1.0.1
-requests=2.2.1
+gensim>=1.0.1
+requests=2.20.0
