Supporting LinearSVC models

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -9,6 +9,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.classification.OneVsRestOp",
   "ml.combust.mleap.bundle.ops.classification.RandomForestClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.SupportVectorMachineOp",
+  "ml.combust.mleap.bundle.ops.classification.LinearSVCOp",
 
   "ml.combust.mleap.bundle.ops.clustering.GaussianMixtureOp",
   "ml.combust.mleap.bundle.ops.clustering.KMeansOp",
