--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -56,7 +56,9 @@ ml.combust.mleap.spark.registry.builtin-ops = [
   "org.apache.spark.ml.bundle.ops.feature.StringIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp",
 
-  "org.apache.spark.ml.bundle.ops.PipelineOp"
+  "org.apache.spark.ml.bundle.ops.PipelineOp",
+
+  "org.apache.spark.ml.classification.bundle.ops.LinearSVCOp"
 ]
 
 ml.combust.mleap.spark.registry.default.ops += "ml.combust.mleap.spark.registry.builtin-ops"
