Made the pull request changes

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -52,13 +52,12 @@ ml.combust.mleap.spark.registry.builtin-ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOp",
+  "org.apache.spark.ml.classification.bundle.ops.LinearSVCOp",
   "org.apache.spark.ml.bundle.ops.feature.FeatureHasherOp",
   "org.apache.spark.ml.bundle.ops.feature.StringIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp",
 
-  "org.apache.spark.ml.bundle.ops.PipelineOp",
-
-  "org.apache.spark.ml.classification.bundle.ops.LinearSVCOp"
+  "org.apache.spark.ml.bundle.ops.PipelineOp"
 ]
 
 ml.combust.mleap.spark.registry.default.ops += "ml.combust.mleap.spark.registry.builtin-ops"
