--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,9 @@ python:
   - "2.7"
 
 install:
-  pip install --user -r ./python/requirements.txt
-
+    -   pip install --user tox
 script:
-  - nosetests ./python -v --exclude-dir=./python/mleap/pyspark
+  - tox -c python/tox.ini -e $(echo py$TRAVIS_PYTHON_VERSION | tr -d .) -v
   - travis/travis.sh
 
 notifications:
