requiremnets-dev includes -r requirement

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,7 +4,7 @@ skipdist = true
 
 [testenv]
 deps =
-        -rrequirements.txt
+        -rrequirements-dev.txt
         nose
         coverage
 commands =
