Run writeRuntimeClasspathToFile task instead of full compile
+ Disable another flaky test: transform row stream > transforms rows in a stream > throttling

--- a/python/Makefile
+++ b/python/Makefile
@@ -17,6 +17,7 @@ clean:
 	find . -name '*~' -exec rm -f {} \;
 
 test:
+	cd .. && sbt mleap-spark-extension/writeRuntimeClasspathToFile && cd -
 	tox
 
 build: clean
