batch leap frame changes

--- a/mleap-tensorflow/src/main/resources/reference.conf
+++ b/mleap-tensorflow/src/main/resources/reference.conf
@@ -1,5 +1,6 @@
 ml.combust.mleap.tensorflow.ops = [
-  "ml.combust.mleap.tensorflow.TensorflowTransformerOp"
+  "ml.combust.mleap.tensorflow.TensorflowTransformerOp",
+  "ml.combust.mleap.tensorflow.BatchTensorflowTransformerOp"
 ]
 
 ml.combust.mleap.registry.default.ops += "ml.combust.mleap.tensorflow.ops"
