--- a/python/tox.ini
+++ b/python/tox.ini
@@ -10,7 +10,7 @@ deps =
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
-                --nologcapture \
+                --nologcapture -s \
                 --exclude-dir=mleap/pyspark \
                 --verbose \
                 --where ./ \
