XGBoostPredictor working. Needs cleanup and tests

--- a/mleap-xgboost-runtime/src/main/resources/reference.conf
+++ b/mleap-xgboost-runtime/src/main/resources/reference.conf
@@ -1,4 +1,5 @@
 ml.combust.mleap.xgboost.ops = [
+//  "ml.combust.mleap.xgboost.runtime.bundle.ops.XGBoostPerformantClassificationOp",
   "ml.combust.mleap.xgboost.runtime.bundle.ops.XGBoostClassificationOp",
   "ml.combust.mleap.xgboost.runtime.bundle.ops.XGBoostRegressionOp"
 ]
