--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -2,6 +2,6 @@ numpy>=1.8.2
 six>=1.10.0
 scipy>=0.13.0b1
 pandas>=0.18.1, <= 0.24.2
-scikit-learn>0.18.dev0,<0.20.0
+scikit-learn>=0.21.0
 gensim>=1.0.1
 urllib3==1.24.2
