--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ scala:
 jdk:
   - oraclejdk8  # sbt +compile fails on jdk11 (xenial's default)
 
+before_script:
+  - travis/scala_classpath_for_python.sh
+
 jobs:
   include:
     - stage: "Mleap tests"
@@ -18,22 +21,12 @@ jobs:
       script:
         - travis/travis.sh
 
-    - name: "Python 2.7 tests"
-      language: python
-      python: 2.7
-      install:
-        - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
-      script:
-        - sbt +compile
-        - tox -c python/tox.ini -e py27 -v
-
     - name: "Python 3.6 tests"
       language: python
       python: 3.6
       install:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
-        - sbt +compile
         - tox -c python/tox.ini -e py36 -v
 
     - name: "Python 3.7 tests"
@@ -47,7 +40,6 @@ jobs:
       install:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
-        - sbt +compile
         - tox -c python/tox.ini -e py37 -v
 
 notifications:
