--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py27,py36,py37
+envlist = py36,py37
 skipdist = true
 
 [testenv]
+passenv = SCALA_CLASS_PATH
 deps =
         -rrequirements-dev.txt
         nose
@@ -10,7 +11,7 @@ deps =
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
-                --nologcapture \
+                --nologcapture -s \
                 --exclude-dir=mleap/pyspark \
                 --verbose \
                 --where ./ \
