--- a/python/requirements-dev.txt
+++ b/python/requirements-dev.txt
@@ -1,4 +1,5 @@
+-f https://dist.apache.org/repos/dist/dev/spark/v3.0.0-rc1-bin/
 -r requirements.txt
 nose-exclude>=0.5.0
 ipdb
-pyspark
+pyspark==3.0.0
