--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,6 +3,7 @@ envlist = py27,py36,py37
 skipdist = true
 
 [testenv]
+passenv = SCALA_VERSION
 deps =
         -rrequirements-dev.txt
         nose
