fix python tests

--- a/python/tox-spark2.4.ini
+++ b/python/tox-spark2.4.ini
@@ -5,7 +5,7 @@ skipdist = true
 [testenv]
 passenv = SCALA_VERSION
 deps =
-        -rrequirements-dev.txt
+        -rrequirements-dev-spark2.4.txt
         nose
         coverage
 commands =
