--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,11 @@ jobs:
     - name: "Python 2.7 + scala 2.11 + spark 2.4 tests"
       language: python
       python: 2.7
-      env:
-        - SCALA_VERSION="2.11.12"
       install:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
-        - sbt -DsparkVersion=2.4.5 -DscalaVersion=${SCALA_VERSION} compile
-        - tox -c python/tox.ini -e py27 -v
+        - sbt -DsparkVersion=2.4.5 -DscalaVersion=2.11.12 compile
+        - SCALA_VERSION=2.11.12 tox -c python/tox-spark2.4.ini -e py27 -v
 
     - name: "Python 3.7 + scala 2.11 + spark 2.4 tests"
       language: python  # This can't be java and python at the same time
@@ -36,13 +34,12 @@ jobs:
         # Required when not setting 'language: java' to force the correct jdk8
         - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
         - JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk-amd64"
-        - SCALA_VERSION="2.11.12"
       dist: xenial  # Travis won't install py37 on trusty
       install:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
-        - sbt -DsparkVersion=2.4.5 -DscalaVersion=${SCALA_VERSION} compile
-        - tox -c python/tox.ini -e py37 -v
+        - sbt -DsparkVersion=2.4.5 -DscalaVersion=2.11.12 compile
+        - tox -c python/tox-spark2.4.ini -e py37 -v
 
     - name: "Python 3.7 + scala 2.12 + spark 3.0 tests"
       language: python  # This can't be java and python at the same time
@@ -51,13 +48,12 @@ jobs:
         # Required when not setting 'language: java' to force the correct jdk8
         - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
         - JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk-amd64"
-        - SCALA_VERSION="2.12.10"
       dist: xenial  # Travis won't install py37 on trusty
       install:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
-        - sbt -DsparkVersion=3.0.0 -DscalaVersion=${SCALA_VERSION} compile
-        - tox -c python/tox.ini -e py37 -v
+        - sbt -DsparkVersion=3.0.0 -DscalaVersion=2.12.10 compile
+        - tox -c python/tox-spark2.4.ini -e py37 -v
 
 notifications:
   on_success: change
