fix python tests

--- a/python/tox-spark2.4.ini
+++ b/python/tox-spark2.4.ini
@@ -1,15 +1,14 @@
 [tox]
-envlist = py27,py36,py37
+envlist = py27,py37
 skipdist = true
 
 [testenv]
-passenv = SCALA_VERSION
 deps =
         -rrequirements-dev-spark2.4.txt
         nose
         coverage
 commands =
-        nosetests --with-coverage \
+        SCALA_VERSION=2.11.12 nosetests --with-coverage \
                 --cover-package=mleap \
                 --nologcapture \
                 --exclude-dir=mleap/pyspark \
