--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - sbt -DsparkVersion=2.4.5 -DscalaVersion=2.11.12 compile
-        - SCALA_VERSION=2.11.12 tox -c python/tox-spark2.4.ini -e py27 -v
+        - tox -c python/tox-spark2.4.ini -e py27 -v
 
     - name: "Python 3.7 + scala 2.11 + spark 2.4 tests"
       language: python  # This can't be java and python at the same time
