--- a/python/tox-spark3.0.ini
+++ b/python/tox-spark3.0.ini
@@ -1,15 +1,14 @@
 [tox]
-envlist = py27,py36,py37
+envlist = py27,py37
 skipdist = true
 
 [testenv]
-passenv = SCALA_VERSION
 deps =
         -rrequirements-dev-spark3.0.txt
         nose
         coverage
 commands =
-        SCALA_VERSION=2.11.12 nosetests --with-coverage \
+        SCALA_VERSION=2.12.10 nosetests --with-coverage \
                 --cover-package=mleap \
                 --nologcapture \
                 --exclude-dir=mleap/pyspark \
