fix python tests

--- a/python/tox-spark3.0.ini
+++ b/python/tox-spark3.0.ini
@@ -3,12 +3,13 @@ envlist = py27,py37
 skipdist = true
 
 [testenv]
+setenv = SCALA_VERSION = 2.12.10
 deps =
         -rrequirements-dev-spark3.0.txt
         nose
         coverage
 commands =
-        SCALA_VERSION=2.12.10 nosetests --with-coverage \
+        nosetests --with-coverage \
                 --cover-package=mleap \
                 --nologcapture \
                 --exclude-dir=mleap/pyspark \
