--- a/python/tox-spark2.4.ini
+++ b/python/tox-spark2.4.ini
@@ -3,12 +3,13 @@ envlist = py27,py37
 skipdist = true
 
 [testenv]
+setenv = SCALA_VERSION = 2.11.12
 deps =
         -rrequirements-dev-spark2.4.txt
         nose
         coverage
 commands =
-        SCALA_VERSION=2.11.12 nosetests --with-coverage \
+        nosetests --with-coverage \
                 --cover-package=mleap \
                 --nologcapture \
                 --exclude-dir=mleap/pyspark \
