Moving python test logic to Makefiles

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,3 +1,7 @@
+.PHONY: help env clean py36_test py37_test test build upload
+
+.EXPORT_ALL_VARIABLES:
+SCALA_CLASS_PATH ?= $(shell cd .. && bash travis/scala_classpath_for_python.sh)
 
 help:
 	@echo "  env         create a development environment using virtualenv"
@@ -16,8 +20,14 @@ clean:
 	find . -name '*.pyo' -exec rm -f {} \;
 	find . -name '*~' -exec rm -f {} \;
 
-test:
-	tox
+py36_test:
+	tox -e py36 -v
+
+py37_test:
+	tox -e py37 -v
+
+test: py36_test py37_test
+	@echo "All python tests completed"
 
 build: clean
 	python setup.py sdist
