Moving SCALA_CLASS_PATH script into script/ and add test steps in the README

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,7 +1,8 @@
 SHELL := /bin/bash
 
 ifndef SCALA_CLASS_PATH
-$(error SCALA_CLASS_PATH for python tests is not set. Please check out the top-level Makefile)
+$(error SCALA_CLASS_PATH for python tests is not set. Please check out \
+the top-level Makefile on how to source scala_classpath_for_python.sh)
 endif
 
 .PHONY: help env clean py36_test py37_test test build upload
@@ -22,6 +23,7 @@ clean:
 	find . -name '*.pyc' -exec rm -f {} \;
 	find . -name '*.pyo' -exec rm -f {} \;
 	find . -name '*~' -exec rm -f {} \;
+	find . -name '__pycache__' | xargs -r rm -rf
 
 py36_test:
 	tox -e py36 -v
