update xgboost dep for scala 2.12

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,13 +3,14 @@ envlist = py36,py37
 skipdist = true
 
 [testenv]
-passenv = SCALA_CLASS_PATH
 deps =
-        -rrequirements-dev.txt
+        -rrequirements-dev-spark3.0.txt
+        nose
+        coverage
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
-                --nologcapture -s \
+                --nologcapture \
                 --exclude-dir=mleap/pyspark \
                 --verbose \
                 --where ./ \
