--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,7 +4,7 @@ skipdist = true
 
 [testenv]
 deps =
-        -rrequirements-dev-spark3.0.txt
+        -rrequirements-dev.txt
         nose
         coverage
 commands =
