--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
   include:
     - stage: "Mleap tests"
       name: "Scala Tests"
+      install:
+        - sudo apt-get install libgomp1
       script:
         - travis/travis.sh
 
@@ -22,6 +24,7 @@ jobs:
       language: python
       python: 3.6
       install:
+        - sudo apt-get install libgomp1
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - make py36_test
@@ -35,6 +38,7 @@ jobs:
         - JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk-amd64"
       dist: xenial  # Travis won't install py37 on trusty
       install:
+        - sudo apt-get install libgomp1
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - make py37_test
