--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,18 @@ scala:
 jdk:
   - oraclejdk8  # sbt +compile fails on jdk11 (xenial's default)
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
+
 jobs:
   include:
     - stage: "Mleap tests"
       name: "Scala Tests"
-      install:
-        - sudo apt-get install libgomp1
       script:
         - travis/travis.sh
 
@@ -24,7 +30,6 @@ jobs:
       language: python
       python: 3.6
       install:
-        - sudo apt-get install libgomp1
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - make py36_test
@@ -38,7 +43,6 @@ jobs:
         - JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk-amd64"
       dist: xenial  # Travis won't install py37 on trusty
       install:
-        - sudo apt-get install libgomp1
         - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - make py37_test
