--- a/python/tox.ini
+++ b/python/tox.ini
@@ -6,12 +6,10 @@ skipdist = true
 passenv = SCALA_CLASS_PATH
 deps =
         -rrequirements-dev.txt
-        nose
-        coverage
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
-                --nologcapture \
+                --nologcapture -s \
                 --exclude-dir=mleap/pyspark \
                 --verbose \
                 --where ./ \
