Spark 3.0 / Scala 2.12 compatible build (#678)
Take over #661

* Add numerical tolerance in comparing float/double in test.
* Restore some code change in ScalerModel
* fixed the kryo dependency (exclude "com.esotericsoftware.kryo" % "kryo")
* Test against spark-3.0.0-rc1

Co-authored-by: Xiangrui Meng <meng@databricks.com>

--- a/python/requirements-dev.txt
+++ b/python/requirements-dev.txt
@@ -1,6 +1,7 @@
+-f https://dist.apache.org/repos/dist/dev/spark/v3.0.0-rc1-bin/
 -r requirements.txt
 coverage<5.0.0
 ipdb
 nose
 nose-exclude>=0.5.0
-pyspark
+pyspark==3.0.0
