--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,15 @@ scala:
 jdk:
   - oraclejdk8  # sbt +compile fails on jdk11 (xenial's default)
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      # Used for xgboost test. (It require libgomp.so.1: version `GOMP_4.0')
+      - gcc-4.8
+      - g++-4.8
+
 jobs:
   include:
     - stage: "Mleap tests"
