--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37
+envlist = black,py36,py37
 skipdist = true
 
 [testenv]
@@ -14,6 +14,9 @@ commands =
                 --verbose \
                 --where ./ \
                 {posargs}
+
+[testenv:black]
+commands = black --check python/setup.py python/mleap python/tests
 
 [testenv:venv]
 envdir = venv
