--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,17 @@ jobs:
       script:
         - travis/travis.sh
 
+    - name: "Python black tests"
+        language: python
+        python: 3.6
+        install:
+          - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
+        script:
+          - make black_test
+
     - name: "Python 3.6 tests"
       language: python
       python: 3.6
-      install:
-        - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
       script:
         - make py36_test
 
