Travis uses gcc 4.8 - Fix broken test - indexin_mode=1 with diabetes dataset

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@
 sudo: required
 dist: trusty
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
+
 services:
   - docker
 
