--- a/.travis.yml
+++ b/.travis.yml
@@ -14,31 +14,31 @@ jdk:
 jobs:
   include:
     - stage: "Mleap tests"
-    - name: "MLeap executor tests"
+      name: "MLeap executor tests"
       script:
-        - sbt "+ mleap-executor-tests/test"
+        - make test_executor
 
     - name: "Mleap benchmark tests"
       script:
-        - sbt "+ mleap-benchmark/test"
+        - make test_benchmark
 
     - name: "MLeap xgboost runtime tests"
       script:
-        - sbt "mleap-xgboost-runtime/test"
+        - make test_xgboost_runtime
 
     - name: "MLeap xgboost spark tests"
       script:
-        - sbt "mleap-xgboost-spark/test"
+        - make test_xgboost_spark
 
-      name: "All other sbt tests"
+    - name: "All other sbt tests"
       script:
-        - sbt "+ test"
+        - make test_root_sbt_project
 
     - name: "Python 3.6 tests"
       language: python
       python: 3.6
       install:
-        - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
+        - pip install tox
       script:
         - make py36_test
 
@@ -51,7 +51,7 @@ jobs:
         - JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk-amd64"
       dist: xenial  # Travis won't install py37 on trusty
       install:
-        - pip install "virtualenv<20.0.0" tox  # Bug https://github.com/pypa/virtualenv/issues/1551
+        - pip install tox
       script:
         - make py37_test
 
