Added lightgbm in reference.conf

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -4,6 +4,7 @@ ml.combust.mleap.spark.registry.builtin-ops = [
   "org.apache.spark.ml.bundle.ops.classification.MultiLayerPerceptronClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.OneVsRestOp",
   "org.apache.spark.ml.bundle.ops.classification.RandomForestClassifierOp",
+  "org.apache.spark.ml.bundle.ops.classification.LightGBMClassificationModelOp",
 
   "org.apache.spark.ml.bundle.ops.clustering.GaussianMixtureOp",
   "org.apache.spark.ml.bundle.ops.clustering.KMeansOp",
@@ -42,6 +43,7 @@ ml.combust.mleap.spark.registry.builtin-ops = [
   "org.apache.spark.ml.bundle.ops.regression.IsotonicRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.LinearRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.RandomForestRegressionOp",
+  "org.apache.spark.ml.bundle.ops.regression.LightGBMRegressionModelOp",
 
   "org.apache.spark.ml.bundle.ops.recommendation.ALSOp",
 
