Upgrade to spark 3.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -5,6 +5,7 @@ skipdist = true
 [testenv]
 passenv = SCALA_CLASS_PATH
 deps =
+        --only-binary=:all:
         -rrequirements-dev.txt
 commands =
         nosetests --with-coverage \
