--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,9 +4,7 @@ skipdist = true
 
 [testenv]
 passenv = SCALA_CLASS_PATH
-deps =
-        --only-binary=:all:
-        -rrequirements-dev.txt
+deps = -rrequirements-dev.txt
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
