Add MapEntrySelector to utilize map support.

--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -2,6 +2,7 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.classification.OneVsRestOp",
   "org.apache.spark.ml.bundle.extension.ops.classification.SupportVectorMachineOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.ImputerOp",
+  "org.apache.spark.ml.bundle.extension.ops.feature.MapEntrySelectorOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MathBinaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MathUnaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MultinomialLabelerOp",
