--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -28,6 +28,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.IDFOp",
   "ml.combust.mleap.bundle.ops.feature.ImputerOp",
   "ml.combust.mleap.bundle.ops.feature.InteractionOp",
+  "ml.combust.mleap.bundle.ops.feature.MapEntrySelectorOp",
   "ml.combust.mleap.bundle.ops.feature.MathBinaryOp",
   "ml.combust.mleap.bundle.ops.feature.MathUnaryOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
