--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ jdk:
 jobs:
   include:
     - name: "xgboost-spark test"
+      before_script:
+        - travis/publish-xgboost4j-spark32-to-local-mvn.sh
       script:
         - make test_xgboost_spark
 
