--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ jobs:
   include:
     - name: "xgboost-spark test"
       before_script:
+        - echo "DEBUG python"
+        - which python3
         - travis/publish-xgboost4j-spark32-to-local-mvn.sh
       script:
-        - python3 -V
         - make test_xgboost_spark
 
 notifications:
