--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
       before_script:
         - travis/publish-xgboost4j-spark32-to-local-mvn.sh
       script:
+        - python -V
         - make test_xgboost_spark
 
 notifications:
