--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,7 @@
 numpy>=1.8.2
 six>=1.10.0
 scipy>=0.13.0b1
-pandas>=0.18.1, <= 0.24.2
+pandas>=1.0.5
 scikit-learn>=0.22.0,<0.23.0
 gensim<4.1.0
 urllib3==1.26.5
