Upgrade python to 3.7/3.8 and scikit-learn to v1.0.0

--- a/python/Makefile
+++ b/python/Makefile
@@ -5,7 +5,7 @@ $(error SCALA_CLASS_PATH for python tests is not set. Please check out \
 the top-level Makefile on how to source scala_classpath_for_python.sh)
 endif
 
-.PHONY: help env clean py37_test test build upload
+.PHONY: help env clean py37_test py38_test test build upload
 
 help:
 	@echo "  env         create a development environment using virtualenv"
@@ -26,9 +26,12 @@ clean:
 	find . -name '__pycache__' | xargs -r rm -rf
 
 py37_test:
-	tox -e py37 -v
+	tox -e py37
 
-test: py37_test
+py38_test:
+	tox -e py38
+
+test: py37_test py38_test
 	@echo "All python tests completed"
 
 build: clean
