--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -2,6 +2,6 @@ numpy>=1.8.2
 six>=1.10.0
 scipy>=0.13.0b1
 pandas>=1.0.5
-scikit-learn>=0.22.0,<0.23.0
+scikit-learn~=1.0.0
 gensim<4.1.0
 urllib3==1.26.5
