Revert "Upgrade python to 3.7/3.8 and scikit-learn to v1.0.0"
This reverts commit 9dcb2602839a468c7f760a98efe80d6c9db7bbfd.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 # Use container-based infrastructure
 os: linux
-dist: focal
+dist: xenial
 
-# Set default python env
-# because the xgboost-spark library when running training code, it will
+# Set default python env to be 3.7
+# because the xgboost-spark 1.5.1 library when running training code, it will
 # run a python script (in RabitTracker) which only support python3
 env:
   global:
-    - PATH=/opt/python/3.8.16/bin:$PATH
+    - PATH=/opt/python/3.6.7/bin:$PATH
 
 addons:
   apt:
@@ -52,20 +52,7 @@ jobs:
           --create-dirs -L -o /home/travis/.sbt/launchers/1.4.9/sbt-launch.jar
           https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/1.4.9/sbt-launch-1.4.9.jar
       script:
-        - make -C python py37_test
-
-    - name: "Python 3.8 tests"
-      language: python
-      python: 3.8.16
-      install:
-        - pip install tox
-      before_script:
-        - >
-          curl
-          --create-dirs -L -o /home/travis/.sbt/launchers/1.4.9/sbt-launch.jar
-          https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/1.4.9/sbt-launch-1.4.9.jar
-      script:
-        - make -C python py38_test
+        - make py37_test
 
     - if: (NOT type IN (pull_request)) AND (branch = master)
       stage: "Deploy"
