--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py37,py38
+envlist = py37
 skipdist = true
 
 [testenv]
 passenv = SCALA_CLASS_PATH
-deps =
-    -rrequirements-dev.txt
-    -rrequirements.txt
+deps = -rrequirements-dev.txt
 commands =
         nosetests --with-coverage \
                 --cover-package=mleap \
