--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gcc-9.3
-      - g++-9.3
+      - gcc
+      - g++
 
 services:
   - docker
