--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Use container-based infrastructure
 os: linux
-dist: focal
+dist: xenial
 
 # Set default python env
 # because the xgboost-spark library when running training code, it will
