Fixing python tests.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,9 @@ envlist = py37,py38
 skipdist = true
 
 [testenv]
-passenv = SCALA_CLASS_PATH
+passenv = SCALA_CLASS_PATH JAVA_HOME SBT
+setenv =
+    PIP_ONLY_BINARY = :all:
 deps =
     -rrequirements-dev.txt
     -rrequirements.txt
