More tox fixes.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 envlist = py37,py38
 skipdist = true
-requires =
-    tox==3.24.4
 
 [testenv]
-passenv = SCALA_CLASS_PATH JAVA_HOME SBT
+passenv =
+    SCALA_CLASS_PATH
+    JAVA_HOME
+    SBT
 setenv =
     PIP_ONLY_BINARY = :all:
 deps =
