Upgrade tensorflow-java to 0.5.0 which corresponds to tensorflow 2.10.1. (#851)
Upgrade tensorflow-java to 0.5.0 which corresponds to tensorflow 2.10.1.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,10 @@ envlist = py37,py38
 skipdist = true
 
 [testenv]
-passenv = SCALA_CLASS_PATH
+passenv =
+    SCALA_CLASS_PATH
+    JAVA_HOME
+    SBT
 deps =
     -rrequirements-dev.txt
     -rrequirements.txt
