--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
   "features": {
     "ghcr.io/devcontainers-extra/features/scala-sdkman:2": {
       "version": "2.12.18",
-      "jdkVersion": "11",
-      "jdkDistro": "open"
+      "jdkVersion": "11"
     }
   }
 }
