Fix outputCol not set issue
If outputCol not set, we should check outputCols first
If outputCols not set, we get the default value of
outputCol

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-    "ghcr.io/devcontainers-extra/features/scala-sdkman:2": {
-      "version": "2.12.18",
-      "jdkVersion": "11"
-    }
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "."
   }
 }
