Change user to mleap

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -23,6 +23,16 @@ RUN DEBIAN_FRONTEND=noninteractive  \
 
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.10 1
 
+ARG USERNAME=mleap
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+# Create the user
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME --shell /usr/bin/bash
+
+USER $USERNAME
+
 # Install SDKMAN and Scala
 SHELL ["/bin/bash", "-c"]
 
